--- a/src/less/main.less
+++ b/src/less/main.less
@@ -17,6 +17,8 @@
 @import "../js/bower_components/bootstrap/less/utilities.less";
 @import "../js/bower_components/bootstrap/less/responsive-utilities.less";
 
+//@import "carousel.less";
+
 /* ==========================================================================
    Variables
    ========================================================================== */
