--- a/src/less/main.less
+++ b/src/less/main.less
@@ -44,6 +44,7 @@
 @item-padding-main:40px;
 @content-padding-top:170px;
 
+@screen-xs-max:480px;
 @screen-lg-max:1399px;
 @screen-xlg:1400px;
 @screen-xlg-min:@screen-xlg;
@@ -1528,7 +1529,7 @@ footer {
                         width:60%;
                         
                         @media screen and(min-width:480px){
-                            width:60%; 
+                            width:50%; 
                         }  
                         
                         
@@ -1561,11 +1562,11 @@ footer {
                         .make-row(0);
                         
                         margin-left:0%;
-                        width:100%;
+                        width:50%;
                         
-                        @media screen and(min-width:@screen-xs-max){
-                            margin-left:17%;
-                            width:20%;
+                        @media screen and(min-width:@screen-xs-min){
+                            margin-left:5%;
+                            width:90%;
                         }
                         
                         @media screen and(min-width:@screen-sm-min){
@@ -1583,7 +1584,10 @@ footer {
                         }
                         margin-top:7%;
                         li {
-                            .make-xs-column(6, 0);
+                            .make-xs-column(12, 0);
+                            @media screen and(min-width:@screen-xs-min){
+                                .make-xs-column(6, 0);
+                            }
                             padding-right:15%;
                         }
                     }
